It launches! (On fabric at least)
TODO: entity item models crash the game
Signed-off-by: Alex Nijjar <alexander.nijjar@icloud.com>